Add chapter_fetch to Tutorial.tex

--- a/Doc/Tutorial.tex
+++ b/Doc/Tutorial.tex
@@ -165,6 +165,9 @@ Michiel de Hoon, Peter Cock, Tiago Antao, Eric Talevich, Bartek Wilczy\'{n}ski}
 %\label{chap:phenotype}
 \include{Tutorial/chapter_phenotype}
 
+%\chapter{Retrieving records from VCF file}
+\include{Tutorial/chapter_fetch}
+
 %\chapter{Cookbook -- Cool things to do with it}
 %\label{chapter:cookbook}
 \include{Tutorial/chapter_cookbook}
