Add chapter for VCF Databases

--- a/Doc/Tutorial.tex
+++ b/Doc/Tutorial.tex
@@ -168,6 +168,9 @@ Michiel de Hoon, Peter Cock, Tiago Antao, Eric Talevich, Bartek Wilczy\'{n}ski}
 %\chapter{Retrieving records from VCF file}
 \include{Tutorial/chapter_fetch}
 
+%\chapter{VCF Databases}
+\include{Tutorial/chapter_databases}
+
 %\chapter{Cookbook -- Cool things to do with it}
 %\label{chapter:cookbook}
 \include{Tutorial/chapter_cookbook}
