--- a/Doc/Tutorial.tex
+++ b/Doc/Tutorial.tex
@@ -165,11 +165,8 @@ Michiel de Hoon, Peter Cock, Tiago Antao, Eric Talevich, Bartek Wilczy\'{n}ski}
 %\label{chap:phenotype}
 \include{Tutorial/chapter_phenotype}
 
-%\chapter{Retrieving records from VCF file}
-\include{Tutorial/chapter_fetch}
-
-%\chapter{VCF Databases}
-\include{Tutorial/chapter_databases}
+%\chapter{Bio.VCF: handling VCF and phased filese}
+\include{Tutorial/chapter_vcf}
 
 %\chapter{Cookbook -- Cool things to do with it}
 %\label{chapter:cookbook}
