Add documentation from pyVCF

--- a/Doc/Tutorial.tex
+++ b/Doc/Tutorial.tex
@@ -45,6 +45,7 @@
 \documentclass{report}
 \usepackage{url}
 \usepackage{fullpage}
+\usepackage{enumitem}
 \usepackage{hevea}
 \usepackage{graphicx}
 \usepackage{listings}
@@ -266,6 +267,10 @@ Ka Yee Yeung, Walter L. Ruzzo: ``Principal Component Analysis for clustering gen
 \bibitem{saldanha2004}
 Alok Saldanha: ``Java Treeview---extensible visualization of microarray data''. \textit{Bioinformatics} {\bf 20} (17): 3246--3248 (2004). 
 \href{http://dx.doi.org/10.1093/bioinformatics/bth349}{http://dx.doi.org/10.1093/bioinformatics/bth349}
+\bibitem{dale2011}
+Ryan K. Dale, Brent S. Pedersen, Aaron R. Quinlan: ``Pybedtools: a flexible Python library for manipulating genomic datasets and annotations''.
+\textit{Bioinformatics} {\bf 27} (24): 3423--3424 (2011).
+\href{https://academic.oup.com/bioinformatics/article/27/24/3423/304825/Pybedtools-a-flexible-Python-library-for}{https://academic.oup.com/bioinformatics/article/27/24/3423/304825/Pybedtools-a-flexible-Python-library-for}
 \end{thebibliography}
 \end{document}
 
