phase tutorial cd

--- a/Doc/Tutorial/chapter_phase.tex
+++ b/Doc/Tutorial/chapter_phase.tex
@@ -16,7 +16,7 @@ information not stated anywhere in the file. Files without original name will be
 \end{enumerate}
 
 
-\subsection{PhasedReader object and functionalities
+\subsection{PhasedReader object and its functionalities}
 
 
 
